# polynomial_fit

./: .gitignore  api.py  api_test.py  fit.py  gradient.py  lbfgs.py  nested.py  polyfit.py  pyproject.toml  test.py  utopia.py
api/: api.py
examples/: fourier_series.py  polyfit.py
